# LightStudio

./: .gitignore  .gitmodules  CMakeLists.txt  Install.bat  README.md  vcpkg.json
Src/: AppUI.cpp  AppUI.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  DeferredShadingEffect.cpp  DeferredShadingEffect.h  EffectControlUI.cpp  EffectControlUI.h  EffectManager.cpp  EffectManager.h  FlatShadingEffect.cpp  FlatShadingEffect.h  GouraudShadingEffect.cpp  GouraudShadingEffect.h  IEffect.h  Light.h  LightControlsUI.cpp  LightControlsUI.h  LightModel.cpp  LightModel.h  LightStudioApp.cpp  LightStudioApp.h  Material.h  MeshCreator.cpp  MeshCreator.h  MeshData.h  PhongPipeline.cpp  PhongPipeline.h  PhongShadingEffect.cpp  PhongShadingEffect.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  ShapeControlUI.cpp  ShapeControlUI.h  (+3 more)
